--- a/Sources/ATAGroup/Resources/Base.lproj/Localizable.strings
+++ b/Sources/ATAGroup/Resources/Base.lproj/Localizable.strings
@@ -3,3 +3,10 @@
 "group list disclaimer" = "Travaillez ensemble : créez un ou plusieurs groupes de chauffeurs pour échangerdes courses, travailler en sécurité.\n3 types de groupes : Groupement juridique (GIE ou groupement juridique), Groupe de collègues (groupes de chauffeurs indépendants), Groupe de Sécurité (chauffeurs qui seront alertés en appuyant sur le bouton SOS de votre application ou taximètre)";
 "My groups" = "My groups";
 "+ add new group" = "+ Add new group";
+"pending" = "pending";
+"validated" = "validated";
+"deleted" = "deleted";
+"delete group" = "delete group";
+"group creation date" = "Created the %@";
+"update document" = "update document";
+"add member" = "+ Add new member";
