--- a/Sources/ATAGroup/Resources/en.lproj/Localizable.strings
+++ b/Sources/ATAGroup/Resources/en.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "nb members format" = "%d members";
 "group list disclaimer" = "Travaillez ensemble : créez un ou plusieurs groupes de chauffeurs pour échangerdes courses, travailler en sécurité.\n3 types de groupes : Groupement juridique (GIE ou groupement juridique), Groupe de collègues (groupes de chauffeurs indépendants), Groupe de Sécurité (chauffeurs qui seront alertés en appuyant sur le bouton SOS de votre application ou taximètre)";
 "My groups" = "My groups";
-"+ add new group" = "+ Add new group";
+"+ add new group" = "+ Add group";
 "pending" = "pending";
 "validated" = "validated";
 "deleted" = "deleted";
