--- a/Sources/ATAGroup/Resources/fr.lproj/Localizable.strings
+++ b/Sources/ATAGroup/Resources/fr.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "nb members format" = "%d membres";
 "group list disclaimer" = "Travaillez ensemble : créez un ou plusieurs groupes de chauffeurs pour échangerdes courses, travailler en sécurité.\n3 types de groupes : Groupement juridique (GIE ou groupement juridique), Groupe de collègues (groupes de chauffeurs indépendants), Groupe de Sécurité (chauffeurs qui seront alertés en appuyant sur le bouton SOS de votre application ou taximètre)";
 "My groups" = "Mes groupes";
-"+ add new group" = "+ Ajouter un nouveau groupe";
+"+ add new group" = "+ Ajouter un groupe";
 "pending" = "En attente de validation";
 "validated" = "actif";
 "deleted" = "Supprimé";
