--- a/Sources/ATAGroup/Resources/Base.lproj/Localizable.strings
+++ b/Sources/ATAGroup/Resources/Base.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 "nb invitation format" = "%d pending invitations";
 "nb members format" = "%d members";
 "group list disclaimer" = "Travaillez ensemble : créez un ou plusieurs groupes de chauffeurs pour échangerdes courses, travailler en sécurité.\n3 types de groupes : Groupement juridique (GIE ou groupement juridique), Groupe de collègues (groupes de chauffeurs indépendants), Groupe de Sécurité (chauffeurs qui seront alertés en appuyant sur le bouton SOS de votre application ou taximètre)";
-"My groups" = "My groups";
+"My groups" = "Driver groups";
 "+ add new group" = "+ Add group";
 "pending" = "pending";
 "validated" = "validated";
 "deleted" = "deleted";
-"delete group" = "delete group";
+"delete group" = "delete group >";
 "group creation date" = "Created the %@";
 "update document" = "update document";
 "add member" = "+ Add new member";
 "add member title" = "Nouveau membre";
-"add member button" = "Ajouter un membre";
+"add member button" = "Envoyer l'invitation";
 "email" = "Nouveau email";
 "new group" = "new group";
 "document name" = "document name";
