--- a/Sources/ATAGroup/Resources/fr.lproj/Localizable.strings
+++ b/Sources/ATAGroup/Resources/fr.lproj/Localizable.strings
@@ -1,17 +1,17 @@
 "nb invitation format" = "%d invitations en attente";
 "nb members format" = "%d membres";
 "group list disclaimer" = "Travaillez ensemble : créez un ou plusieurs groupes de chauffeurs pour échangerdes courses, travailler en sécurité.\n3 types de groupes : Groupement juridique (GIE ou groupement juridique), Groupe de collègues (groupes de chauffeurs indépendants), Groupe de Sécurité (chauffeurs qui seront alertés en appuyant sur le bouton SOS de votre application ou taximètre)";
-"My groups" = "Mes groupes";
+"My groups" = "Groupes chauffeurs";
 "+ add new group" = "+ Ajouter un groupe";
-"pending" = "En attente de validation";
+"pending" = "Invitation en attente de validation";
 "validated" = "actif";
 "deleted" = "Supprimé";
-"delete group" = "supprimer le groupe";
+"delete group" = "supprimer le groupe >";
 "group creation date" = "Créé le %@";
 "update document" = "modifier le document";
 "add member" = "+ Ajouter un membre";
 "add member title" = "Nouveau membre";
-"add member button" = "Ajouter un membre";
+"add member button" = "Envoyer l'invitation";
 "email" = "Nouveau email";
 "new group" = "nouveau groupe";
 "document name" = "nom du document";
