--- a/Sources/ATAGroup/Resources/en.lproj/Localizable.strings
+++ b/Sources/ATAGroup/Resources/en.lproj/Localizable.strings
@@ -25,3 +25,5 @@
 "Delete" = "Delete";
 "legal document" = "justificatif juridique";
 "new group disclaimer" = "Interface de création d'un nouveau groupe";
+"can't add self" = "You already are part of any group you create";
+"oups" = "Oups";
