--- a/Sources/ATAGroup/Resources/fr.lproj/Localizable.strings
+++ b/Sources/ATAGroup/Resources/fr.lproj/Localizable.strings
@@ -25,3 +25,5 @@
 "Delete" = "Supprimer";
 "legal document" = "justificatif juridique";
 "new group disclaimer" = "Interface de création d'un nouveau groupe";
+"can't add self" = "Vous êtes déjà dans ce groupe";
+"oups" = "Oups";
