--- a/Sources/ATAGroup/Resources/Base.lproj/Localizable.strings
+++ b/Sources/ATAGroup/Resources/Base.lproj/Localizable.strings
@@ -28,3 +28,5 @@
 "can't add self" = "You already are part of any group you create";
 "oups" = "Oups";
 "owner" = "propriétaire";
+"suspended" = "suspendu";
+"incomplete" = "incomplet";
