added no alert grp view

--- a/Sources/ATAGroup/Resources/Base.lproj/Localizable.strings
+++ b/Sources/ATAGroup/Resources/Base.lproj/Localizable.strings
@@ -33,3 +33,4 @@
 "incomplete" = "incomplet";
 "member already exist in group" = "Ce membre existe déjà dans ce groupe";
 "Actions" = "Actions";
+"create alert group" = "Merci de créer ou de rejoindre un groupe de type Alerte";
