--- a/Sources/ATAGroup/Resources/Base.lproj/Localizable.strings
+++ b/Sources/ATAGroup/Resources/Base.lproj/Localizable.strings
@@ -33,4 +33,4 @@
 "incomplete" = "incomplet";
 "member already exist in group" = "Ce membre existe déjà dans ce groupe";
 "Actions" = "Actions";
-"create alert group" = "Merci de créer ou de rejoindre un groupe de type Alerte";
+"create alert group" = "Veuillez créer ou rejoindre un groupe de type ALERTE pour configurer votre bouton SOS";
