--- a/Sources/ATAGroup/Resources/Base.lproj/Localizable.strings
+++ b/Sources/ATAGroup/Resources/Base.lproj/Localizable.strings
@@ -1,32 +1,32 @@
-"nb invitation format" = "%d pending invitations";
-"nb members format" = "%d members";
-"group list disclaimer" = "Travaillez ensemble : créez un ou plusieurs groupes de chauffeurs pour échanger des courses, travailler en sécurité.\n3 types de groupes : Groupement juridique (GIE ou groupement juridique), Groupe de collègues (groupes de chauffeurs indépendants), Groupe de Sécurité (chauffeurs qui seront alertés en appuyant sur le bouton SOS de votre application ou taximètre)";
-"My groups" = "Driver groups";
-"+ add new group" = "+ Add group";
-"pending" = "pending";
-"validated" = "validated";
-"deleted" = "deleted";
-"delete group" = "delete group >";
-"group creation date" = "Created the %@";
-"update document" = "update document";
-"add member" = "+ Add new member";
+"nb invitation format" = "%d invitations en attente";
+"nb members format" = "%d membres";
+"group list disclaimer" = "Travaillez ensemble : créez un ou plusieurs groupes de chauffeurs pour échanger des courses et travailler en sécurité";
+"My groups" = "Groupes chauffeurs";
+"+ add new group" = "+ Ajouter un groupe";
+"pending" = "Invitation en attente de validation";
+"validated" = "actif";
+"deleted" = "Supprimé";
+"delete group" = "supprimer le groupe >";
+"group creation date" = "Créé le %@";
+"update document" = "modifier le document";
+"add member" = "+ Ajouter un membre";
 "add member title" = "Nouveau membre";
 "add member button" = "Envoyer l'invitation";
 "email" = "Saisir l'email du nouveau membre";
-"new group" = "new group";
-"document name" = "document name";
-"create group" = "create group";
-"groupName" = "Group name";
-"documentName" = "document name";
-"groupType" = "group type";
-"Delete group warning" = "You are about to delete this group. Do you wish to proceed ?";
-"Delete member warning" = "You are about to delete this member. Do you wish to proceed ?";
-"Delete group" = "Delete group confirmation";
-"Cancel" = "Cancel";
-"Delete" = "Delete";
+"new group" = "nouveau groupe";
+"document name" = "nom du document";
+"create group" = "Créer le groupe";
+"groupName" = "nom du groupe";
+"documentName" = "nom du document";
+"groupType" = "type de groupe";
+"Delete group warning" = "Vous êtes sur le point de supprimer ce groupe. Voulez vous continuer ?";
+"Delete member warning" = "Vous êtes sur le point de supprimer ce membre. Voulez vous continuer ?";
+"Delete group" = "Confirmation de suppression";
+"Cancel" = "Annuler";
+"Delete" = "Supprimer";
 "legal document" = "justificatif juridique";
-"new group disclaimer" = "Interface de création d'un nouveau groupe";
-"can't add self" = "You already are part of any group you create";
+"new group disclaimer" = "3 types de groupes : Groupement juridique (GIE ou groupement juridique), Groupe de collègues (groupes de chauffeurs indépendants), Groupe de Sécurité (chauffeurs qui seront alertés en appuyant sur le bouton SOS de votre application ou taximètre)";
+"can't add self" = "Vous êtes déjà dans ce groupe";
 "oups" = "Oups";
 "owner" = "propriétaire";
 "suspended" = "suspendu";
@@ -34,4 +34,4 @@
 "member already exist in group" = "Ce membre existe déjà dans ce groupe";
 "Actions" = "Actions";
 "create alert group" = "Veuillez créer ou rejoindre un groupe de type ALERTE pour configurer votre bouton SOS";
-"no group label" = "Vous semblez bien seul ici.\n\Partagez et discutez avec vos collègues en créant un nouveau groupe à l'aide du bouton \"+ Ajouter un groupe\"";
+"no group label" = "Partagez et discutez avec vos collègues en créant un nouveau groupe à l'aide du bouton \"+ Ajouter un groupe\"";
