--- a/Sources/ATAGroup/Resources/fr.lproj/Localizable.strings
+++ b/Sources/ATAGroup/Resources/fr.lproj/Localizable.strings
@@ -1,6 +1,6 @@
 "nb invitation format" = "%d invitations en attente";
 "nb members format" = "%d membres";
-"group list disclaimer" = "Travaillez ensemble : créez un ou plusieurs groupes de chauffeurs pour échanger des courses, travailler en sécurité.\n3 types de groupes : Groupement juridique (GIE ou groupement juridique), Groupe de collègues (groupes de chauffeurs indépendants), Groupe de Sécurité (chauffeurs qui seront alertés en appuyant sur le bouton SOS de votre application ou taximètre)";
+"group list disclaimer" = "Travaillez ensemble : créez un ou plusieurs groupes de chauffeurs pour échanger des courses et travailler en sécurité";
 "My groups" = "Groupes chauffeurs";
 "+ add new group" = "+ Ajouter un groupe";
 "pending" = "Invitation en attente de validation";
@@ -25,7 +25,7 @@
 "Cancel" = "Annuler";
 "Delete" = "Supprimer";
 "legal document" = "justificatif juridique";
-"new group disclaimer" = "Interface de création d'un nouveau groupe";
+"new group disclaimer" = "3 types de groupes : Groupement juridique (GIE ou groupement juridique), Groupe de collègues (groupes de chauffeurs indépendants), Groupe de Sécurité (chauffeurs qui seront alertés en appuyant sur le bouton SOS de votre application ou taximètre)";
 "can't add self" = "Vous êtes déjà dans ce groupe";
 "oups" = "Oups";
 "owner" = "propriétaire";
@@ -34,4 +34,4 @@
 "member already exist in group" = "Ce membre existe déjà dans ce groupe";
 "Actions" = "Actions";
 "create alert group" = "Veuillez créer ou rejoindre un groupe de type ALERTE pour configurer votre bouton SOS";
-"no group label" = "Vous semblez bien seul ici.\n\Partagez et discutez avec vos collègues en créant un nouveau groupe à l'aide du bouton \"+ Ajouter un groupe\"";
+"no group label" = "Partagez et discutez avec vos collègues en créant un nouveau groupe à l'aide du bouton \"+ Ajouter un groupe\"";
